--- a/styles.css
+++ b/styles.css
@@ -14,3 +14,16 @@
 .odd-section {
   background-color: lightgray;
 }
+
+#solve-button {
+  background-color: coral;
+  color: white;
+  padding: 10px;
+  margin: 20px;
+  border-radius: 10px;
+  border: none;
+}
+
+#solve-button:hover {
+  background-color: rgb(255, 81, 17);
+}
